# CardFinder

./: .gitattributes  AndroidStudioProjects.7z  README.md
코드_cpp/: CMakeLists.txt  CardFinder.cpp  card-finder.cpp  native-lib.cpp
코드_cpp/include/source/: CardFinder.hpp  Client.hpp  SubProcess.hpp  ThreadPool.hpp  Utils.hpp
코드_java/: MainActivity.java  ViewActivity.java
코드_python/: MakeCSV.py  Server.py  cnn.py  create_lmdb_dataset.py  dataset.py  dataset_train_alphabet.csv  dataset_train_number.csv  dataset_val_alphabet.csv  dataset_val_number.csv  train.ipynb  util.py
코드_python/lmdb_data/alphabet/train/: lock.mdb
코드_python/lmdb_data/alphabet/val/: lock.mdb
코드_python/lmdb_data/number/train/: lock.mdb
코드_python/lmdb_data/number/val/: lock.mdb
코드_python/lmdb_data/train/: lock.mdb
코드_python/lmdb_data/val/: lock.mdb
코드_pytorch/: CustomDataset.py  MakeCSV.py  main.py  number_model.py  train_val.py
